# sea-power-missions

./: Cargo.toml  thoughts.md  todo.md
resources/: mission_template.ini
samples/: Formation.ini  Single Vessel.ini
src/: config.rs  dir.rs  gen.rs  gui.rs  main.rs  mission.rs  rand_ext.rs  taskforce.rs  unit_db.rs
src/gui/: mod.rs  reusable_id.rs  views.rs
src/gui/views/: unit_table.rs  unit_tree.rs
