[package]
name = "sea-power-missions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.13"
# INI
configparser = "3.1"
# TUI
cursive = "0.21"
cursive_table_view = "0.15"
cursive_tree_view = "0.9"
