[package]
name = "sea-power-missions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
rand = "0.8"
# find common directories
dirs = "5.0"
# INI
configparser = "3.1"
# TUI
cursive = "0.21"
cursive_table_view = "0.15"
cursive_tree_view = "0.9"

[target.'cfg(windows)'.dependencies]
# WinAPI
winreg = "0.52"

[dev-dependencies]
fake = "3.1.0"
